# railway

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  build.rs  de.schmidhuberj.DieBahn.gschema.xml  deny.toml  flake.nix  meson.build  meson_options.txt  railway.doap  resources.gresource.xml
.flatpak-builder/cache/refs/heads/x86_64-de.schmidhuberj.DieBahn.Devel.json/: init
.flatpak-builder/checksums/: x86_64-de.schmidhuberj.DieBahn.Devel.json
.github/workflows/: crate-dist.yml  mirror.yml
build-aux/: de.schmidhuberj.DieBahn.Devel.json  de.schmidhuberj.DieBahn.json
build-aux/test/: i18n-strings-check.sh
data/: de.schmidhuberj.DieBahn.desktop.in.in  de.schmidhuberj.DieBahn.gschema.xml  de.schmidhuberj.DieBahn.metainfo.xml  de.schmidhuberj.DieBahn.metainfo.xml.in  de.schmidhuberj.DieBahn.metainfo.xml.in.in  meson.build
data/icons/: meson.build
data/resources/: meson.build  resources.gresource.xml  resources.gresource.xml.in  style-hc.css  style.css
data/resources/ui/: alt_label.blp  alt_label.ui  date_time_picker.blp  date_time_picker.ui  frequency_label.blp  frequency_label.ui  indicator_icons.blp  indicator_icons.ui  intermediate_location_item.blp  intermediate_location_item.ui  journey_detail_page.blp  journey_detail_page.ui  journey_list_item.blp  journey_list_item.ui  journey_store_item.blp  journey_store_item.ui  journeys_page.blp  journeys_page.ui  leg_item.blp  leg_item.ui  live_update_box.blp  place_list_item.blp  place_list_item.ui  preferences_dialog.blp  preferences_dialog.ui  preferences_window.ui  provider_list_item.blp  provider_list_item.ui  provider_popover.blp  provider_popover.ui  refresh_button.blp  refresh_button.ui  remark_item.blp  remark_item.ui  search_options_button.blp  search_options_button.ui  search_options_dialog.blp  search_options_dialog.ui  search_options_window.ui  search_page.blp  (+14 more)
packaging/: de.schmidhuberj.DieBahn.desktop  de.schmidhuberj.DieBahn.metainfo.xml
po/: LINGUAS  POTFILES  ar.po  bg.po  da.po  de.po  de.schmidhuberj.DieBahn.pot  diebahn.pot  es.po  et.po  fi.po  fr.po  hi.po  hr.po  hu.po  ia.po  it.po  ja.po  kab.po  ko.po  nb_NO.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sv.po  tr.po  uk.po  zh_Hans.po
po/locale/de/: de.schmidhuberj.DieBahn.po
po/locale/en/: de.schmidhuberj.DieBahn.po
po/locale/nl/: de.schmidhuberj.DieBahn.po
src/: config.rs  config.rs.in  error.rs  main.rs  meson.build
src/backend/: client.rs  discount_card.rs  frequency.rs  hafas_client.rs  intermediate_location.rs  journey.rs  journeys_result.rs  late_factor.rs  leg.rs  load_factor.rs  mod.rs  place.rs  price.rs  provider.rs  remark.rs  request_limiter.rs  station.rs  stop.rs  stopover.rs  timer.rs
src/gui/: alt_label.rs  date_time_picker.rs  error.rs  frequency_label.rs  indicator_icons.rs  intermediate_location_item.rs  journey_detail_page.rs  journey_list_item.rs  journey_store_item.rs  journeys_page.rs  leg_item.rs  live_update_box.rs  mod.rs  place_list_item.rs  preferences_dialog.rs  preferences_window.rs  provider_list_item.rs  provider_popover.rs  refresh_button.rs  remark_item.rs  search_options_button.rs  search_options_dialog.rs  search_options_window.rs  search_page.rs  search_store_item.rs  station_entry.rs  stopover_item.rs  time_divider.rs  transition.rs  utility.rs  window.rs
src/gui/objects/: journey.rs  journey_result.rs  leg.rs  mod.rs  remark.rs  station.rs  stop.rs  stopover.rs
src/gui/stores/: journey_store.rs  migrate_journey_store.rs  mod.rs  search_store.rs
subprojects/: blueprint-compiler.wrap
tools/: screenshot.sh
ui/: alt_label.ui  journey_detail_page.ui  journey_list_item.ui  journeys_page.ui  leg_item.ui  preferences_window.ui  remark_item.ui  search_page.ui  search_store_item.ui  station_entry.ui  stopover_item.ui  window.ui
