[package]
name = "diebahn"
description = "Find all your travel information"
authors = ["Julian Schmidhuber <schmidhuberj2@protonmail.com>"]
homepage = "https://mobile.schmidhuberj.de/railway"
repository = "https://gitlab.com/schmiddi-on-mobile/railway"
version = "2.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.7.3", package = "gtk4", features = ["v4_12"] }
gdk = { version = "0.7.3", package = "gdk4" }
libadwaita = { version = "0.5.3", features = ["v1_4"] }
gettext-rs = { version = "0.7.0", features = ["gettext-system"] }

once_cell = "1.18.0"
tokio = { version = "1.34.0", features = ["rt", "macros", "rt-multi-thread", "time"] }
chrono = "0.4.31"

log = "0.4.20"
env_logger = "0.10.1"

# hafas-rs = { version = "0.1.0", default-features = false, features = [ "hyper-requester", "all-profiles", "rt-multi-thread" ] }
hafas-rs = { git = "https://gitlab.com/schmiddi-on-mobile/hafas-rs", rev = "6e0480dc47886947d4fe926a9dd640da15c2065b", default-features = false, features = [ "hyper-requester", "all-profiles", "rt-multi-thread" ] }

serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
