[package]
name = "diebahn"
description = "Find all your travel information" # keep in sync with metainfo
authors = ["Julian Schmidhuber <mobile@schmidhuberj.de>", "Markus Göllnitz <camelcasenick@bewares.it>"]
homepage = "https://mobile.schmidhuberj.de/railway"
repository = "https://gitlab.com/schmiddi-on-mobile/railway"
version = "2.6.0-beta.2"
license = "GPL-3.0-or-later"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.8.1", package = "gtk4", features = ["v4_14"] }
gdk = { version = "0.8.1", package = "gdk4" }
libadwaita = { version = "0.6.0", features = ["v1_5"] }
gettext-rs = { version = "0.7.0", features = ["gettext-system"] }

once_cell = "1.19.0"
tokio = { version = "1.35.1", features = ["rt", "macros", "rt-multi-thread", "time"] }
chrono = "0.4.31"
chrono-tz = "0.8"

log = "0.4.20"
env_logger = "0.11.1"

rcore = { git = "https://gitlab.com/schmiddi-on-mobile/railway-backend", rev = "18f4cdd463ba6379307991afac6a8c227e0d3af7", package = "railway-core", features = ["hyper-requester", "rt-multi-thread", "serde"] }
rapi = { git = "https://gitlab.com/schmiddi-on-mobile/railway-backend", rev = "18f4cdd463ba6379307991afac6a8c227e0d3af7", package = "railway-api", features = ["rt-multi-thread"] }

serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
