[package]
name = "diebahn"
description = "Find all your travel information" # keep in sync with metainfo
authors = ["Julian Schmidhuber <mobile@schmidhuberj.de>", "Markus Göllnitz <camelcasenick@bewares.it>"]
homepage = "https://mobile.schmidhuberj.de/railway"
repository = "https://gitlab.com/schmiddi-on-mobile/railway"
version = "2.7.0"
license = "GPL-3.0-or-later"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.9.0", package = "gtk4", features = ["v4_14"] }
gdk = { version = "0.9.0", package = "gdk4" }

gettext-rs = { version = "0.7.0", features = ["gettext-system"] }

once_cell = "1.19.0"
tokio = { version = "1.39.1", features = ["rt", "macros", "rt-multi-thread", "time"] }
chrono = "0.4.38"
chrono-tz = "0.8"

log = "0.4.22"
env_logger = "0.11.4"

rcore = { version = "0.1.0", package = "railway-core", features = ["hyper-requester", "rt-multi-thread", "serde"] }
rapi = { version = "0.1.0", package = "railway-api", features = ["rt-multi-thread"] }

serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"

[dependencies.libadwaita]
git = "https://gitlab.gnome.org/msandova/libadwaita-rs"
branch = "adw-wrap-box"
features = ["v1_7"]
